[package]
name = "rsomics-vcf-window-pi"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Nucleotide diversity (π) in fixed-width windows from VCF — byte-identical to vcftools --window-pi"
readme = "README.md"
repository = "https://github.com/omics-rust/rsomics-vcf-window-pi"

[[bin]]
name = "rsomics-vcf-window-pi"
path = "src/main.rs"

[lib]
name = "rsomics_vcf_window_pi"
path = "src/lib.rs"

[dependencies]
rsomics-common = "0.6"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "window_pi"
harness = false
